--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="styled.css"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flex practice</title>
 </head>
 <body>
-    
+    <div class="tourist-menu-widget">
+       
+        <div class="menu-container">
+        <div class="menu-item no-1">
+            <img src="PARIS.jpg" width="100%" height="100%" alt="IMAGE NOT AVAILABLE" />
+            <div class="item-name">Name: Item A</div>
+            <div class="item-price">Price: $20.00 </div>
+            <button class="order-btn">Order</button>
+        </div>
+        <div class="menu-item no-1">
+            <img src="PARIS.jpg" width="100%" height="100%" alt="IMAGE NOT AVAILABLE" />
+            <div class="item-name">Name: Item A</div>
+            <div class="item-price">Price: $20.00 </div>
+            <button class="order-btn">Order</button>
+        </div>
+        <div class="menu-item no-1">
+            <img src="PARIS.jpg" width="100%" height="100%" alt="IMAGE NOT AVAILABLE" />
+            <div class="item-name">Name: Item A</div>
+            <div class="item-price">Price: $20.00 </div>
+            <button class="order-btn">Order</button>
+        </div>
+    </div>
+    </div>
+</div>
 </body>
 </html>
