--- a/Menu/index.html
+++ b/Menu/index.html
@@ -5,32 +5,144 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive webpage</title>
+    <title>Responsive Website</title>
 </head>
 <body>
-    <div class="tourist-menu-widget">
-       
-        <div class="menu-container">
-        <div class="menu-item no-1">
-            <img src="PARIS.jpg" width="100%" height="100%" alt="IMAGE NOT AVAILABLE" />
-            <div class="item-name">Name: Item A</div>
-            <div class="item-price">Price: $20.00 </div>
-            <button class="order-btn">Order</button>
+    <div class="homepage_container">
+    <header>
+            <ul class="header_container">
+                <li>
+                   <a href=""> 
+                     <img src="PARIS.jpg" width="100px" height="100px" alt="IMAGE NOT AVAILABLE" />
+                    </a>
+                </li>
+                <li>
+                    <a href="">Home</a>
+                    
+                </li>
+                <li>
+                    <a href="">About Us</a>
+                </li>
+                <li>
+                    <a href="">Menu</a>
+                </li>
+                <li>
+                    <a href="">Your Cart</a>
+                </li>
+            </ul>
+    </header>
+    <aside>
+        <h3>Category</h3>
+        <!--Fitler-er-->
+        <div class="filter_container">
+            <h2 class="filter_header">
+                Filter by:
+            </h2>
+             <!--Price Fitlerer-->
+            <div class="filter_price">
+                <h4 class="filter_price_title">Price:</h4>
+                    <div class="filter_lower">
+                        <label for="lower">
+                            <input class="lower_checkbox" type="radio" id="lower" name="lower"/>
+                            Low to High
+                        </label> 
+                    </div>
+                    <div class="filter_higher">
+                        <label for="lower">
+                            <input class="higher_checkbox" type="radio" id="higher" name="higher"/>
+                            High to Low
+                        </label>
+                    </div>
+             </div>
+                <!--Type Fitlerer-->
+                <div class="filter_type">
+                    <h4 class="filter_type_title">Type:</h4>
+                        <div class="filter_bev">
+                            <label for="bev">
+                                <input class="bev_checkbox" type="radio" id="bev" name="bev"/>
+                              Beverage
+                            </label> 
+                        </div>
+                        <div class="filter_foods">
+                            <label for="foods">
+                                <input class="foods_checkbox" type="radio" id="foods" name="foods"/>
+                               Foods
+                            </label>
+                        </div>
+                 </div>
         </div>
-        <div class="menu-item no-1">
-            <img src="PARIS.jpg" width="100%" height="100%" alt="IMAGE NOT AVAILABLE" />
-            <div class="item-name">Name: Item A</div>
-            <div class="item-price">Price: $20.00 </div>
-            <button class="order-btn">Order</button>
+    </aside>
+    <content>
+        <h4>Foods</h4>
+        <div class="menu_container">
+            <div class="menu_item_card">
+                    <img class="item_img" src="PARIS.jpg" alt="no image"  width="300" height="300"/>
+                    <div class="item_name_title">
+                        Name: 
+                    </div>
+                    <div class="item_price_title">
+                        Price: 
+                    </div>
+                    <div class="item_Availability_title">
+                        Availability:
+                    </div>
+                 <button class="item_to_cart">
+                     Add to Cart
+                 </button>
+                </div>
+                <div class="menu_item_card">
+                    <img class="item_img" src="PARIS.jpg" alt="no image"  width="300" height="300"/>
+                    <div class="item_name_title">
+                        Name: 
+                    </div>
+                    <div class="item_price_title">
+                        Price: 
+                    </div>
+                    <div class="item_Availability_title">
+                        Availability:
+                    </div>
+                 <button class="item_to_cart">
+                     Add to Cart
+                 </button>
+                </div>
+                <div class="menu_item_card">
+                    <img class="item_img" src="PARIS.jpg" alt="no image"  width="300" height="300"/>
+                    <div class="item_name_title">
+                        Name: 
+                    </div>
+                    <div class="item_price_title">
+                        Price: 
+                    </div>
+                    <div class="item_Availability_title">
+                        Availability:
+                    </div>
+                 <button class="item_to_cart">
+                     Add to Cart
+                 </button>
+                </div>
+            </div>
+            </div>
+            </div>
         </div>
-        <div class="menu-item no-1">
-            <img src="PARIS.jpg" width="100%" height="100%" alt="IMAGE NOT AVAILABLE" />
-            <div class="item-name">Name: Item A</div>
-            <div class="item-price">Price: $20.00 </div>
-            <button class="order-btn">Order</button>
-        </div>
-    </div>
-    </div>
+    </content>
+    <footer>
+        <div>Stay in touch</div>
+        <ul class="footer_container">
+            <li>
+                <a href="">Facebook</a>
+
+            </li>
+            <li>
+                <a href="">Twitter</a>
+            </li>
+            <li>
+                <a href="">Instagram</a>
+            </li>
+            <li>
+                <a href="">Youtube</a>
+            </li>
+        </ul>
+    </footer>
 </div>
 </body>
 </html>
